log
Thu 31 Aug 2023 04:11:48 PM UTC: 
 tests:  0|6
total_score: 0/70
85cdccb
Wed 06 Sep 2023 09:56:54 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
b32a470
Wed 06 Sep 2023 09:58:37 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:14: error: ‘*nuevoMapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   58 |     nuevoMapa->buckets[i]=NULL;
      |     ~~~~~~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
24d9ab6
Wed 06 Sep 2023 10:23:18 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
521b718
Wed 06 Sep 2023 10:27:23 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:12: error: ‘capacity’ undeclared (first use in this function)
   43 |   hash(key,capacity)
      |            ^~~~~~~~
hashmap.c:43:12: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:43:21: error: expected ‘;’ before ‘}’ token
   43 |   hash(key,capacity)
      |                     ^
      |                     ;
   44 | }
      | ~                    
Compilation failed
2db7c7f
Wed 06 Sep 2023 10:27:32 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:12: error: ‘capacity’ undeclared (first use in this function)
   43 |   hash(key,capacity);
      |            ^~~~~~~~
hashmap.c:43:12: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d48100c
Wed 06 Sep 2023 10:30:41 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:15: error: called object ‘hash’ is not a function or function pointer
   43 |   long hash = hash(key,map->capacity);
      |               ^~~~
hashmap.c:43:8: note: declared here
   43 |   long hash = hash(key,map->capacity);
      |        ^~~~
Compilation failed
c266299
Wed 06 Sep 2023 10:31:19 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:8: error: unused variable ‘valorHash’ [-Werror=unused-variable]
   43 |   long valorHash = hash(key,map->capacity);
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dc8d3b4
Wed 06 Sep 2023 10:35:30 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|5
total_score: 10/70
730d52d
Wed 06 Sep 2023 10:44:19 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
322caac
Wed 06 Sep 2023 11:21:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
e5db44e
Sat 09 Sep 2023 08:26:18 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:85:7: error: ‘a’ undeclared (first use in this function)
   85 |       a=si
      |       ^
hashmap.c:85:7: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:85:9: error: ‘si’ undeclared (first use in this function); did you mean ‘sin’?
   85 |       a=si
      |         ^~
      |         sin
hashmap.c:85:11: error: expected ‘;’ before ‘}’ token
   85 |       a=si
      |           ^
      |           ;
   86 |     }
      |     ~      
Compilation failed
accce99
Sat 09 Sep 2023 08:30:06 PM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
5b9c3d1
Sat 09 Sep 2023 08:44:22 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:77:9: error: unused variable ‘par’ [-Werror=unused-variable]
   77 |   Pair* par = searchMap(map,key);
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
8aeb11d
Sat 09 Sep 2023 08:45:11 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:79:9: error: expected identifier or ‘(’ before ‘->’ token
   79 |     Pair->key=NULL
      |         ^~
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f7a55f7
Sat 09 Sep 2023 08:46:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
28a8ac6
Sat 09 Sep 2023 08:47:04 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:80:5: error: ‘mapa’ undeclared (first use in this function); did you mean ‘map’?
   80 |     mapa->size--;
      |     ^~~~
      |     map
hashmap.c:80:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
36ff472
Sat 09 Sep 2023 08:47:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
c8b86e9
Sat 09 Sep 2023 08:47:26 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
24db620
Sat 09 Sep 2023 08:52:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:99:5: error: expected ‘(’ before ‘)’ token
   99 |   if)
      |     ^
      |     (
hashmap.c:99:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   99 |   if)
      |   ^~
hashmap.c:100:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  100 |     return NULL;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
1964930
Sat 09 Sep 2023 08:53:04 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
c3d23a4
Sat 09 Sep 2023 08:56:12 PM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:99:17: error: expected expression before ‘)’ token
   99 |   for(int i=0;i<)
      |                 ^
hashmap.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
  102 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4db9700
